V.Next
---------
- [MINOR] Implement updates of the native auth web API (#2261)

V.17.0.0
---------
- [PATCH] Add JWT header field for KDF version (#2220)
- [MINOR] Catch unknown Keystore errors during decryption (#2255)
- [MINOR] AuthFidoChallengeHandler and other passkey changes (#2146)
- [MAJOR] Addition of Credential Manager and associated passkey logic (#2267)
- [PATCH] Pass through ESTS x-ms-srs header field (#2256)

V.16.3.0
----------
- [MINOR] Changes to launch AEA app from Broker's WebView (#2264)

V.16.2.0
----------
- [PATCH] always make a copy of bundle before modifying & sending out via ipc (#2239)
- [PATCH] Use v2.0 url for OpenID Client (#2208)
- [MINOR] Added passkey protocol header (behind a flag) (#2181)
- [MINOR] Fix crash during onCreate() (#2202)
- [MINOR] add removeUserLegacy method in MsalTestApp infra (#2212)
- [PATCH] Always validate calling app's redirect URI (#2211)
- [MINOR] Updating JSON version (#2221)
- [PATCH] Passing span context to AuthorizationActivity (#2209)
- [MINOR] Bumping Moshi versions; force setting Okio version (#2210)
- [PATCH] Fix to generate new Asymmetric Key (#2222)
- [MINOR] Move addition of passkey header from BaseController to WebView fragment (#2237)

V.16.1.1
----------
- [PATCH] Fix client Discovery (#2213)

V.16.1.0
----------
- [MINOR] Handle crypto error gracefully (#2190)
- [MINOR] Stop logging thread name (#2185)
- [MINOR] Adding Moshi, and WebAuthnJsonUtil (#2189)

V.16.0.1
----------
- [MINOR] Add LTW as prod broker app (#2179)

V.16.0.0
----------
- [MINOR] Add MsaGrantedRefreshTokenNotSupportedOnAadTenant error code to ServiceException (#2165)
- [MAJOR] Separate Broker API and Client SDK Active Broker caches (#2164)
- [MINOR] Deprecate Common logger wrapper (#2157)
- [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
- [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
- [MAJOR] Update active broker cache upon returned result (#2140)